# DeSCAM

./: .gitignore  .gitmodules  4  AddTest.cmake  AppImage_walkthru.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  Dockerfile  Install.md  README.md  Requirements.md  Uart_rx.h  Uart_types.h  action.yml  build_info  install.sh  installer  master  ter temp  test.txt  transcript
example/: AddExample.cmake  CMakeLists.txt  CMakeLists.txt.in  Example.cmake  Master.h~  Readme.md  add_subdirectory.cmake  exampleheaders.h.in  files_for_testing.txt  master.xml  template_h.h.in  tests.h.in
example/Buffer_Channel/: Buffer_Channel.h  Buffer_Channel.hpp  Buffer_Channel.vhdl  Buffer_Channel_ifs.h  CMakeLists.txt  Consumer.h  Producer.h  sc_main.cpp
example/Bus/: Bus.dot  CMakeLists.txt
example/Comm_Test/: Test.h  TestCase_00.dot  TestCase_00.vhi  TestCase_01.dot  TestCase_01.vhi  TestCase_02.dot  TestCase_02.vhi  TestCase_03_Spurious.dot  TestCase_04_Spurious.dot  TestCase_05.dot  TestCase_05.vhi  TestCases.h  TestVP.h  Test_1_final.dot  Test_1_inProcess.dot  Test_1_original.dot
example/Comm_Test_newInterfaces/: CMakeLists.txt  TestCases.h
example/FFT/: CMakeLists.txt
example/FIFO/: CMakeLists.txt  Consumer.h  FIFO.h  FIFO.hpp  FIFO_ifs.h  Producer.h  Pseudo_Algorithm.c  Regfile_generated.vhi  sc_main.cpp
example/FIFO_Shared/: CMakeLists.txt  Consumer.h  FIFO_Shared.h  FIFO_Shared.vhi  Producer.h  sc_main.cpp
example/FIR-Filter/: CMakeLists.txt
example/Interfaces/: Blocking.h  Blocking.hpp  ImportantState.h  Interfaces.h  MasterSlave.h  MasterSlave.hpp  Shared.h  Shared.hpp  blocking_ifs.h  masterSlave_ifs.h  shared_ifs.h
example/Paper/: Example.dot
example/RISCV_ISA/: CMakeLists.txt  ISA.dot  PowerEstimator.cpp  PowerEstimator.h  Readme.md
example/RISCV_ISS/: Readme.md
example/RISCV_MS/: CMakeLists.txt
example/RISCV_Pipelined/: CMakeLists.txt
example/RISCV_Pipelined_3S/: Readme.md
example/RISCV_Power/: CMakeLists.txt
example/RISCV_Test/: README.md  run_all_tests.sh
example/RISCV_Test_ELF/: CMakeLists.txt  README.md  run_all_tests.sh
example/RISCV_UVMSYSTEMC/: CMakeLists.txt  Top.cpp
example/RISCV_commons/: Commons.md  Compiling.md  Defines.h  Memory_Interfaces.h  Memory_Regions.h  Utilities.h
example/RISCV_interrupts/: README.md
example/RISCV_isa_array/: ISA_new.dot  Makefile  Readme.md  cmake_install.cmake
example/Regfile_Channel/: CMakeLists.txt  Control.h  Initializer_Dummy.h  Regfile.h  Regfile.hpp  Regfile.vhdl  Regfile_ifs.h  globalTypes.vhdl  sc_main.cpp
example/SONET-Framer/: completeness.vhi  dataAlign_macro.vhi  errorsec.vhd  framer.vhd  lof.vhd  lof.vhi  main.vhi  myOSA.vhd  myOSA_pkg.vhd  run.tcl
example/SingleMasterMultiSlave/: Overview.docx  Readme.txt
example/Synchronizer/: CMakeLists.txt  Consumer.h  Producer.h  Synchronizer.h  Synchronizer.hpp  Synchronizer_ifs.h  sc_main.cpp
example/TLM_Examples/: CMakeLists.txt
example/UART/: README.md
example/UART_NORDIC/: CMakeLists.txt  Stimuli.h  Uart.h  Uart_control.h  Uart_control_new.h  Uart_control_old.h  Uart_rx.h  Uart_rx_restructured.h  Uart_tx.h  Uart_tx_master.h  Uart_types.h  sc_main.cpp
example/Uart_aashild_v3/: CMakeLists.txt  Stimuli.h  Uart_control.h  Uart_rx.h  Uart_tx.h  Uart_types.h  sc_main.cpp
example/Whishbone/: CMakeLists.txt
example/add_example/: AddExample.cmake  CMakeLists.txt  CMakeLists.txt.in  CMakeListsAddExample.txt.in  NewExample.cmake  Readme.md  template_h.h.in  template_sc_main.cpp.in  tests.config.in  tests.h.in
example/agile_pipeline/: .gitignore  CMakeLists.txt  Pipeline.h  Pipeline.vhdl  Pipeline.vhi  Pipeline2.vhdl  Pipeline2.vhi  extended_ppa.py  oec_update.tcl  top.vhdl  types.vhdl
example/ibex_khatib/: prove2.tcl
example/ibex_shreyas/: prove2.tcl
example/tests/: BubbleSort_Step-2_ternary.h  BugTest.h  CMakeLists.txt  README.txt  SlaveDaveBave.h  Test_Compare.h  Test_Module_GlobalFunctions.h  Test_Module_GlobalFunctions2.h  Test_Nordic.h  ahb_bus.h  foobar.h  main.cpp
src/: AddOptimizeOption.cmake  AddPlugin.cmake  AddPluginOption.cmake  CMakeLists.txt  transcript
src/ParseSystemC/: CMakeLists.txt~  config.ini~  main.cpp~
src/cfgFactory/: CFGFactory.cpp  CFGFactory.h  CMakeLists.txt  CfgBlock.cpp  CfgBlock.h  CfgUtilities.cpp  CfgUtilities.h  CreateInitSection2.cpp  CreateInitSection2.h  CreateRealCFG.cpp  CreateRealCFG.h  EnumartePathsVisitor.cpp  EnumartePathsVisitor.h  ExpandCommunications.cpp  ExpandCommunications.h  FindEndNode.cpp  FindEndNode.h  FlattenIf.cpp  FlattenIf.h  FlattenWhile.cpp  FlattenWhile.h
src/descamCheck/: CMakeLists.txt  checkFile.cpp  descam_check.py
src/functionFactory/: CMakeLists.txt  FindPathsToReturn.cpp  FindPathsToReturn.h  FunctionFactory.cpp  FunctionFactory.h  Path.cpp  Path.h
src/global/: CMakeLists.txt  Completeness.cpp  Completeness.h  Config.h  DataTypes.cpp  DataTypes.h  ErrorMsg.cpp  ErrorMsg.h  ExprTranslator.cpp  ExprTranslator.h  ExprVisitor.cpp  ExprVisitor.h  FatalError.h  GlobalUtilities.cpp  GlobalUtilities.h  ModelGlobal.cpp  ModelGlobal.h  NodePeekVisitor.cpp  NodePeekVisitor.h  PrintStmt.cpp  PrintStmt.h  RecursiveVisitor.cpp  RecursiveVisitor.h  SimplifyVisitor.cpp  SimplifyVisitor.h  StmtNodeAlloc.cpp  StmtNodeAlloc.h  enums.h
src/model/: AbstractNode.cpp  AbstractNode.h  AbstractVisitor.cpp  AbstractVisitor.h  CMakeLists.txt  Channel.cpp  Channel.h  DataSignal.cpp  DataSignal.h  DataType.cpp  DataType.h  DescamException.cpp  DescamException.h  FSM.cpp  FSM.h  Function.cpp  Function.h  Interface.cpp  Interface.h  LocationInfo.cpp  LocationInfo.h  Model.cpp  Model.h  Module.cpp  Module.h  ModuleInstance.cpp  ModuleInstance.h  Parameter.cpp  Parameter.h  Port.cpp  Port.h  PortMapChannel.cpp  PortMapChannel.h  Protocol.cpp  Protocol.h  TimeExpr.cpp  TimeExpr.h  Timepoint.cpp  Timepoint.h  TypeInterface.h  (+4 more)
src/modelFactory/: CMakeLists.txt  ChannelProperties.cpp  ChannelProperties.h  CheckErrors.cpp  CheckErrors.h  ClangDiagnosticPrinter.cpp  DotExportInstances.cpp  (+94 more)
tests/: CMakeLists.txt  ESL-files  ExprConstVisitorTest.h  readme.md  testheaders.h  testheaders.h.in
(+7010 files in other folders)
