add_subdirectory(Print_ITL_Tests)
add_subdirectory(PrintSkeleton_Test)
add_subdirectory(DataType_Test)
add_subdirectory(Module_Test)
add_subdirectory(Model_Test)
add_subdirectory(ExprTranslator_Test)
add_subdirectory(StmtNodeAlloc_Test)
add_subdirectory(SimplifyVisitor_Test)
add_subdirectory(Stmts_Test)
add_subdirectory(Optimizer_Test)
add_subdirectory(Operation_Test)
add_subdirectory(Synchronizer_Properties)
add_subdirectory(Regfile_Properties)
add_subdirectory(Bus_Properties)
add_subdirectory(Bus4_Properties)
