#add_subdirectory(Example_Blocking_1_o)
#add_subdirectory(Example_Blocking_1_t)
#add_subdirectory(Example_Blocking_2_o)
#add_subdirectory(Example_Blocking_2_t)
#add_subdirectory(Example_MasterSlave_1_o)
#add_subdirectory(Example_MasterSlave_1_t)
#add_subdirectory(Example_MasterSlave_2_o)
#add_subdirectory(Example_MasterSlave_2_t)
#add_subdirectory(Example_MasterSlave_3_o)
#add_subdirectory(Example_MasterSlave_3_t)
#add_subdirectory(Example_Blocking_E_t)
#add_subdirectory(Example_MasterSlave_E_t)
#add_subdirectory(Example_Shared_1_o)
#add_subdirectory(Example_Shared_1_t)

#add_subdirectory(Example_MasterSlave_E)
#add_subdirectory(Example_Blocking_E)
#add_subdirectory(Example_Shared_E)

add_subdirectory(Blocking_o)
add_subdirectory(Blocking_n)
add_subdirectory(MasterSlave_o)
add_subdirectory(MasterSlave_n)
add_subdirectory(Shared_o)
add_subdirectory(Shared_n)
