include(AddExample.cmake)
message(STATUS "${EXAMPLE_NAMES_LIST}")
set(CMAKELISTS "${CMAKE_SOURCE_DIR}/example/CMakeLists.txt")
file(STRINGS "${CMAKELISTS}" ADDED_EXAMPLES)

foreach(EXAMPLE_NAME_SUB ${EXAMPLE_NAMES_LIST})
    set(EXAMPLE_SUB_LIST ${EXAMPLE_SUB_LIST} "add_subdirectory(${EXAMPLE_NAME_SUB})")
endforeach()
foreach(EXAMPLE_NAME_SUB ${EXAMPLE_NAMES_LIST})
    set(EXAMPLE_DISABLED_SUB_LIST ${EXAMPLE_DISABLED_SUB_LIST} "#add_subdirectory(${EXAMPLE_NAME_SUB})")
endforeach()
#message(STATUS "${ADDED_EXAMPLES}")

#    message(STATUS "${EXAMPLE_SUB_LIST}")
foreach(LINE ${ADDED_EXAMPLES})
    message(STATUS "not modified: ${LINE}")
    if((LINE MATCHES "^add_subdirectory.") AND (NOT LINE MATCHES "^add_subdirectory\\(add_example\\)"))
#        message(STATUS ${LINE})
        list(FIND EXAMPLE_SUB_LIST "${LINE}" EXAMPLE_ADDED)
        message(STATUS ${EXAMPLE_ADDED})
        if (EXAMPLE_ADDED EQUAL -1)
            string(REGEX REPLACE "^[a]" "#a" LINE ${LINE})
            message(STATUS "modified: ${LINE}")
        endif ()
        list(APPEND MODIFIED "${LINE}\n")
    elseif(LINE MATCHES "^#add_subdirectory.")
        list(FIND EXAMPLE_DISABLED_SUB_LIST "${LINE}" EXAMPLE_DISABLED)
        message(STATUS ${EXAMPLE_DISABLED})
        if (EXAMPLE_DISABLED GREATER -1)
            string(REGEX REPLACE "^#" "" LINE ${LINE})
            message(STATUS "modified: ${LINE}")
        endif ()
        list(APPEND MODIFIED "${LINE}\n")
#        message(STATUS "${MODIFIED}")
    else()
        string (REGEX REPLACE ";" "\\\\;" LINE "${LINE}")
        list(APPEND MODIFIED "${LINE}\n")
#        message(STATUS "modified: " ${MODIFIED})
    endif()
endforeach()
message(STATUS ${MODIFIED})
file(REMOVE ${CMAKE_SOURCE_DIR}/example/CMakeLists.txt)
file(WRITE ${CMAKE_SOURCE_DIR}/example/CMakeLists.txt ${MODIFIED})